# Pico

./: .gitignore  main.py
app/: __init__.py  config.py  http_request.py  quaternion_robot.py  runtime.py  web_server.py
auth/: __init__.py  jwt.py  pop.py
cpp/: CMakeLists.txt  README.md  Wiring.md  btstack_config.h  lwipopts.h  pico_sdk_import.cmake
cpp/include/: ble_provision.h  config.h  http_server.h  index_html.h  pico_robotics.h  wifi_config.h
cpp/src/: ble_provision.cpp  http_server.cpp  main.cpp  pico_robotics.cpp  quaternion_robot.cpp  wifi_config.cpp  wifi_provision.gatt
cpp/tools/: flash.cmake
drivers/: __init__.py  pico_robotics.py
simple_motor_controller/: CMakeLists.txt  README.md
simple_motor_controller/include/: config.h  pico_robotics.h  quaternion_robot.h
simple_motor_controller/src/: main.cpp  pico_robotics.cpp
static/: index.html
tools/: certificate_generator.py  secret_generator.py
